--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 fastapi
 uvicorn
+pydantic
 python-dotenv
 groq
+langchain-core
 langchain-community
 langchain-huggingface
-langchain-core
-faiss-cpu
-pydantic
-python-multipart
-sentence-transformers
+upstash-vector
